--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<div class="container">
 		<div class="main">
 			<div class="banner">
-				<a href=""><img src="images/banner-00.jpg" alt=""></a>
+				<a href="#"><img src="images/banner-00.jpg" alt=""></a>
 				<div class="controller">
 					<span class="left"></span>
 					<span class="right"></span>
@@ -77,90 +77,347 @@
 					</ul>
 				</div>
 			</div>
-			<div class="latest-musician">
-				<div class="title">
-					<h3>本周流行音乐人</h3>
-					<span class="subtitle">|上升最快音乐人</span>
+			<div class="column latest-musician">
+				<div class="header">
+					<h3 class="title">本周流行音乐人</h3>
+					<span>|</span> <span class="subtitle">上升最快音乐人</span>
 				</div>
-				<div class="list">
-					<ul>
-						<li>
-							<a href=""><img src="" alt=""></a>
-							<a href="">
-								<p></p>
-							</a>
-							<a href="">
-								<p></p>
-							</a>
-						</li>
-						<li>
-							<a href=""><img src="" alt=""></a>
-							<a href="">
-								<p></p>
-							</a>
-							<a href="">
-								<p></p>
-							</a>
-						</li>
-						<li>
-							<a href=""><img src="" alt=""></a>
-							<a href="">
-								<p></p>
-							</a>
-							<a href="">
-								<p></p>
-							</a>
-						</li>
-						<li>
-							<a href=""><img src="" alt=""></a>
-							<a href="">
-								<p></p>
-							</a>
-							<a href="">
-								<p></p>
-							</a>
-						</li>
-						<li>
-							<a href=""><img src="" alt=""></a>
-							<a href="">
-								<p></p>
-							</a>
-							<a href="">
-								<p></p>
-							</a>
-						</li>
-						<li>
-							<a href=""><img src="" alt=""></a>
-							<a href="">
-								<p></p>
-							</a>
-							<a href="">
-								<p></p>
-							</a>
-						</li>
-						<li>
-							<a href=""><img src="" alt=""></a>
-							<a href="">
-								<p></p>
-							</a>
-							<a href="">
-								<p></p>
-							</a>
-						</li>
-						<li>
-							<a href=""><img src="" alt=""></a>
-							<a href="">
-								<p></p>
-							</a>
-							<a href="">
-								<p></p>
-							</a>
-						</li>
-					</ul>
-				</div>
+				<ul class="list">
+					<li class="item">
+						<a href="" class="photo"><img src="images/disc01.jpg" alt=""><div class="hidden">还</div><span class="play-btn"></span><span class="play"></span></a>
+						<p class="title musician">
+							<a href=""><span class="bell"></span><span>跳格子</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>民谣 Folk</span>
+						</p>						
+					</li>
+					<li class="item">
+						<a href="" class="photo"><img src="images/disc01.jpg" alt=""><div class="hidden">未</div><span class="play-btn"></span><span class="play"></span></a>
+						<p class="title musician">
+							<a href=""><span>跳格子</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>民谣 Folk</span>
+						</p>						
+					</li>
+					<li class="item">
+						<a href="" class="photo"><img src="images/disc01.jpg" alt=""><div class="hidden">完</div><span class="play-btn"></span><span class="play"></span></a>
+						<p class="title musician">
+							<a href=""><span class="bell"></span><span>跳格子</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>民谣 Folk</span>
+						</p>						
+					</li>
+					<li class="item">
+						<a href="" class="photo"><img src="images/disc01.jpg" alt=""><div class="hidden">成</div><span class="play-btn"></span><span class="play"></span></a>
+						<p class="title musician">
+							<a href=""><span>跳格子</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>民谣 Folk</span>
+						</p>						
+					</li>
+					<li class="item">
+						<a href="" class="photo"><img src="images/disc01.jpg" alt=""><div class="hidden">谢</div><span class="play-btn"></span><span class="play"></span></a>
+						<p class="title musician">
+							<a href=""><span>跳格子</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>民谣 Folk</span>
+						</p>						
+					</li>
+					<li class="item">
+						<a href="" class="photo"><img src="images/disc01.jpg" alt=""><div class="hidden">谢</div><span class="play-btn"></span><span class="play"></span></a>
+						<p class="title musician">
+							<a href=""><span>跳格子</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>民谣 Folk</span>
+						</p>						
+					</li>
+					<li class="item">
+						<a href="" class="photo"><img src="images/disc01.jpg" alt=""><div class="hidden">观</div><span class="play-btn"></span><span class="play"></span></a>
+						<p class="title musician">
+							<a href=""><span>跳格子</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>民谣 Folk</span>
+						</p>						
+					</li>
+					<li class="item">
+						<a href="" class="photo"><img src="images/disc01.jpg" alt=""><div class="hidden">赏</div><span class="play-btn"></span><span class="play"></span></a>
+						<p class="title musician">
+							<a href=""><span class="bell"></span><span>跳格子</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>民谣 Folk</span>
+						</p>						
+					</li>
+				</ul>
 			</div>
-			<div class="new-disc"></div>
-			<div class="latest-songlist"></div>
+			<div class="column new-disc">
+				<div class="header">
+					<h3 class="title">新碟榜</h3><a href="#" class="subtitle current">最热</a><span> | </span><a href="#" class="subtitle">华语</a><span> | </span><a href="#" class="subtitle">欧美</a><span> | </span><a href="#" class="subtitle">日韩</a><span> | </span><a href="#" class="subtitle">单曲</a>
+					<a class="more subtitle">更多</a>
+				</div>
+				<ul class="list">
+					<li class="item">
+						<a href="" class="photo">
+							<img src="images/disc02.jpg" alt="">
+						</a>						
+						<p class="title musician">
+							<a href=""><span>悬日</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>田馥甄 Hebe</span>
+						</p>
+						<p class="stars">
+							<span class="star full"></span><span class="star full"></span><span class="star full"></span><span class="star half"></span><span class="star empty"></span><span class="score">7.1</span>
+						</p>
+					</li>
+					<li class="item">
+						<a href="" class="photo">
+							<img src="images/disc02.jpg" alt="">
+						</a>						
+						<p class="title musician">
+							<a href=""><span>悬日</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>田馥甄 Hebe</span>
+						</p>
+						<p class="subtitle stars">
+							<span class="star full"></span><span class="star full"></span><span class="star full"></span><span class="star half"></span><span class="star empty"></span><span class="score">7.1</span>
+						</p>
+					</li>
+					<li class="item">
+						<a href="" class="photo">
+							<img src="images/disc02.jpg" alt="">
+						</a>						
+						<p class="title musician">
+							<a href=""><span>悬日</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>田馥甄 Hebe</span>
+						</p>
+						<p class="subtitle stars">
+							<span class="star full"></span><span class="star full"></span><span class="star full"></span><span class="star half"></span><span class="star empty"></span><span class="score">7.1</span>
+						</p>
+					</li>
+					<li class="item">
+						<a href="" class="photo">
+							<img src="images/disc02.jpg" alt="">
+						</a>						
+						<p class="title musician">
+							<a href=""><span>悬日</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>田馥甄 Hebe</span>
+						</p>
+						<p class="subtitle stars">
+							<span class="star full"></span><span class="star full"></span><span class="star full"></span><span class="star half"></span><span class="star empty"></span><span class="score">7.1</span>
+						</p>
+					</li>
+					<li class="item">
+						<a href="" class="photo">
+							<img src="images/disc02.jpg" alt="">
+						</a>						
+						<p class="title musician">
+							<a href=""><span>悬日</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>田馥甄 Hebe</span>
+						</p>
+						<p class="subtitle stars">
+							<span class="star full"></span><span class="star full"></span><span class="star full"></span><span class="star half"></span><span class="star empty"></span><span class="score">7.1</span>
+						</p>
+					</li>
+					<li class="item">
+						<a href="" class="photo">
+							<img src="images/disc02.jpg" alt="">
+						</a>						
+						<p class="title musician">
+							<a href=""><span>悬日</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>田馥甄 Hebe</span>
+						</p>
+						<p class="subtitle stars">
+							<span class="star full"></span><span class="star full"></span><span class="star full"></span><span class="star half"></span><span class="star empty"></span><span class="score">7.1</span>
+						</p>
+					</li>
+					<li class="item">
+						<a href="" class="photo">
+							<img src="images/disc02.jpg" alt="">
+						</a>						
+						<p class="title musician">
+							<a href=""><span>悬日</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>田馥甄 Hebe</span>
+						</p>
+						<p class="subtitle stars">
+							<span class="star full"></span><span class="star full"></span><span class="star full"></span><span class="star half"></span><span class="star empty"></span><span class="score">7.1</span>
+						</p>
+					</li>
+					<li class="item">
+						<a href="" class="photo">
+							<img src="images/disc02.jpg" alt="">
+						</a>						
+						<p class="title musician">
+							<a href=""><span>悬日</span></a>
+						</p>
+						<p class="subtitle type">
+							<span>田馥甄 Hebe</span>
+						</p>
+						<p class="subtitle stars">
+							<span class="star full"></span><span class="star full"></span><span class="star full"></span><span class="star half"></span><span class="star empty"></span><span class="score">7.1</span>
+						</p>
+					</li>
+				</ul>
+			</div>
+			<div class="column latest-songlist">
+				<div class="header">
+					<h3 class="title">近期热门歌单</h3><a href="#" class="subtitle current">最热</a><span> | </span><a href="#" class="subtitle">流行</a><span> | </span><a href="#" class="subtitle">摇滚</a><span> | </span><a href="#" class="subtitle">民谣</a><span> | </span><a href="#" class="subtitle">原声</a>
+					<a class="more subtitle">更多</a>
+				</div>
+				<ul class="list">
+					<li class="item songslist">
+						<a href="" class="cover">
+							<img src="images/cover01.jpg" alt="">
+						</a>
+						<div class="hidden">
+							<a href="">
+								<span class="play-btn"></span><span class="play"></span>
+							</a>
+						</div>			
+						<p class="title">
+							<a href="">灯</a><span>(27)</span>
+						</p>
+						<p class="subtitle type">
+							<a href=""><span class="author">Bo-Tree</span></a><span>制作 | 26 收藏</span>
+						</p>
+						<ul class="songs">
+							<li>1.Full Moon</li>
+							<li>2.Koumyou [光明</li>
+							<li>3.Om Mani Peme Hung Hrih</li>
+							<li>...</li>
+						</ul>
+					</li>
+					<li class="item songslist">
+						<a href="" class="cover">
+							<img src="images/cover01.jpg" alt="">
+						</a>
+						<div class="hidden">
+							<a href="">
+								<span class="play-btn"></span><span class="play"></span>
+							</a>
+						</div>			
+						<p class="title">
+							<a href="">灯</a><span>(27)</span>
+						</p>
+						<p class="subtitle type">
+							<a href=""><span class="author">Bo-Tree</span></a><span>制作 | 26 收藏</span>
+						</p>
+						<ul class="songs">
+							<li>1.Full Moon</li>
+							<li>2.Koumyou [光明</li>
+							<li>3.Om Mani Peme Hung Hrih</li>
+							<li>...</li>
+						</ul>
+					</li>
+					<li class="item songslist">
+						<a href="" class="cover">
+							<img src="images/cover01.jpg" alt="">
+						</a>
+						<div class="hidden">
+							<a href="">
+								<span class="play-btn"></span><span class="play"></span>
+							</a>
+						</div>			
+						<p class="title">
+							<a href="">灯</a><span>(27)</span>
+						</p>
+						<p class="subtitle type">
+							<a href=""><span class="author">Bo-Tree</span></a><span>制作 | 26 收藏</span>
+						</p>
+						<ul class="songs">
+							<li>1.Full Moon</li>
+							<li>2.Koumyou [光明</li>
+							<li>3.Om Mani Peme Hung Hrih</li>
+							<li>...</li>
+						</ul>
+					</li>
+					<li class="item songslist">
+						<a href="" class="cover">
+							<img src="images/cover01.jpg" alt="">
+						</a>
+						<div class="hidden">
+							<a href="">
+								<span class="play-btn"></span><span class="play"></span>
+							</a>
+						</div>			
+						<p class="title">
+							<a href="">灯</a><span>(27)</span>
+						</p>
+						<p class="subtitle type">
+							<a href=""><span class="author">Bo-Tree</span></a><span>制作 | 26 收藏</span>
+						</p>
+						<ul class="songs">
+							<li>1.Full Moon</li>
+							<li>2.Koumyou [光明</li>
+							<li>3.Om Mani Peme Hung Hrih</li>
+							<li>...</li>
+						</ul>
+					</li>
+					<li class="item songslist">
+						<a href="" class="cover">
+							<img src="images/cover01.jpg" alt="">
+						</a>
+						<div class="hidden">
+							<a href="">
+								<span class="play-btn"></span><span class="play"></span>
+							</a>
+						</div>			
+						<p class="title">
+							<a href="">灯</a><span>(27)</span>
+						</p>
+						<p class="subtitle type">
+							<a href=""><span class="author">Bo-Tree</span></a><span>制作 | 26 收藏</span>
+						</p>
+						<ul class="songs">
+							<li>1.Full Moon</li>
+							<li>2.Koumyou [光明</li>
+							<li>3.Om Mani Peme Hung Hrih</li>
+							<li>...</li>
+						</ul>
+					</li>
+					<li class="item songslist">
+						<a href="" class="cover">
+							<img src="images/cover01.jpg" alt="">
+						</a>
+						<div class="hidden">
+							<a href="">
+								<span class="play-btn"></span><span class="play"></span>
+							</a>
+						</div>			
+						<p class="title">
+							<a href="">灯</a><span>(27)</span>
+						</p>
+						<p class="subtitle type">
+							<a href=""><span class="author">Bo-Tree</span></a><span>制作 | 26 收藏</span>
+						</p>
+						<ul class="songs">
+							<li>1.Full Moon</li>
+							<li>2.Koumyou [光明</li>
+							<li>3.Om Mani Peme Hung Hrih</li>
+							<li>...</li>
+						</ul>
+					</li>
+
+				</ul>
+			</div>
 		</div>
 		<div class="side">
 			<div class="join-us"></div>
