add sidebar & footer

--- a/index.html
+++ b/index.html
@@ -420,24 +420,429 @@
 			</div>
 		</div>
 		<div class="side">
-			<div class="join-us"></div>
-			<div class="musician-categary"></div>
-			<div class="billboard"></div>
-			<div class="top250"></div>
-			<div class="download"></div>
-			<div class="contact-us"></div>
+			<div class="column join-us">
+				<div class="item"><a href=""><span class="nums">46916</span></a><br><span class="types">音乐人</span></div>
+				<div class="item"><a href=""><span class="nums">46916</span></a><br><span class="types">音乐人</span></div>
+				<div class="item"><a href=""><span class="nums">46916</span></a><br><span class="types">音乐人</span></div>
+				<input class="btn" type="submit" value="我要加入">
+			</div>
+			<div class="column musician-categary">
+				<div class="header">
+					<h3 class="title">热门音乐人分类</h3>
+					<a class="more subtitle">更多</a>
+				</div>
+				<ul class="categary">
+					<li><a href="">流行</a></li>
+					<li><a href="">轻音乐</a></li>
+					<li><a href="">摇滚</a></li>
+					<li><a href="">古典</a></li>
+					<li><a href="">电子</a></li>
+					<li><a href="">世界音乐</a></li>
+					<li><a href="">民谣</a></li>
+					<li><a href="">说唱</a></li>
+					<li><a href="">爵士</a></li>
+					<li><a href="">原声</a></li>
+				</ul>
+			</div>
+			<div class="column billboard">
+				<div class="header">
+					<h3 class="title">本周单曲榜</h3>
+					<input class="btn play-btn" type="submit" value="播放全部">
+					<span class="play"></span>
+				</div>
+				<div class="categary">
+					<a href="#" class="subtitle current">最热</a><span> | </span><a href="#" class="subtitle">流行</a><span> | </span><a href="#" class="subtitle">摇滚</a><span> | </span><a href="#" class="subtitle">流行</a><span> | </span><a href="#" class="subtitle">电子</a><span> | </span><a href="#" class="subtitle">说唱</a>
+				</div>
+				<ul class="list">
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">1</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">2</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">3</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">4</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">5</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">6</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">7</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">8</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">9</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover02.jpg" alt="">
+							<span class="play-btn"></span>
+							<span class="play"></span>
+							<div class="info">
+								<p class="title">
+									<span>Intro-在黄桷垭写生</span>
+								</p>
+								<p class="subtitle">
+									<span>苔藓的白水日志 / 1646次播放</span>
+								</p>
+							</div>
+							<span class="order">10</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="column top250">
+				<div class="header">
+					<h3 class="title">豆瓣音乐250</h3>
+					<a class="more subtitle">更多</a>
+				</div>
+				<ul class="list">
+					<li class="item">
+						<a href="">
+							<img src="images/cover03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>未完成</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>未完成</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>未完成</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>未完成</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>未完成</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>未完成</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>未完成</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>未完成</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/cover03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>未完成</span></a>
+							</p>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="column download">
+				<ul class="list">
+					<li class="item app">
+						<a href="">
+							<img src="images/logo02.jpg" alt="">
+							<div class="info">
+								<p class="title">
+									<span>豆瓣FM客户端</span>
+								</p>
+								<p class="subtitle">
+									<span>让好音乐继续</span>
+								</p>
+							</div>
+							<span class="next"></span>
+						</a>
+					</li>
+					<li class="item mini_program">
+						<img src="images/mini_program.jpg" alt="">
+						<div class="info">
+							<p class="title">
+								<span>豆瓣音乐人小程序</span>
+							</p>
+							<p class="subtitle">
+								<span>发现当下最酷的独立音乐</span>
+							</p>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="column contact-us">
+				<div class="header">
+					<h3 class="title">联系我们</h3>
+					<a class="subtitle">artists@douban.com</a>
+				</div>
+				<ul class="list">
+					<li class="item">
+						<a href="">
+							<img src="images/logo03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>音乐人小站</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/logo03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>音乐人小站</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/logo03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>音乐人小站</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/logo03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>音乐人小站</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/logo03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>音乐人小站</span></a>
+							</p>
+						</div>
+					</li>
+					<li class="item">
+						<a href="">
+							<img src="images/logo03.jpg" alt="">
+						</a>
+						<div class="info">
+							<p class="title">
+								<a href="" class="hover"><span>音乐人小站</span></a>
+							</p>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
-	</div>	
+	</div>
 	<footer>
-		<div class="copyright"></div>
+		<div class="copyright">© 2005－2020 douban.com, all rights reserved 北京豆网科技有限公司</div>
 		<ul class="about-us">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>
+				<a href="">关于豆瓣</a>
+				<span>·</span>
+			</li>
+			<li>
+				<a href="">在豆瓣工作</a>
+				<span>·</span>
+			</li>
+			<li>
+				<a href="">联系我们</a>
+				<span>·</span>
+			</li>
+			<li>
+				<a href="">法律声明</a>
+				<span>·</span>
+			</li>
+			<li>
+				<a href="">帮助中心</a>
+				<span>·</span>
+			</li>
+			<li>
+				<a href="">手机音乐</a>
+				<span>·</span>
+			</li>
+			<li>
+				<a href="">豆瓣广告</a>
+			</li>
 		</ul>
 	</footer>
 </body>
